<resources>
    <string name="app_name">TacheMun</string>
    <string name="connexion_txt">Connexion requise</string>
    <string name="connexion_button">Se connecter</string>
    <string name="inscription_button">S\'inscrire</string>
    <string name="password_hint">mot de passe</string>
    <string name="pseudo_hint">Nom d\'utilisateur</string>
    <string name="title_activity_listeliste">Listeliste</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test_scrolling">TestScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="label_pseudo">Entrez un pseudo</string>
    <string name="pseudo_input_hint">Entrez un pseudo</string>
    <string name="password1_input_hint">Entrez un mot de passe</string>
    <string name="password2_input_hint">Reppetez le mot de passe</string>
    <string name="inscription_mail_input_hint">Entrez un mail</string>
    <string name="inscription_confirmation_button_txt">Confirmer</string>
    <string name="cree_nouv_listeTache_nomTache_input_hint">Nom de votre liste</string>
    <string name="nouvListe_descrListe_hint">Description de la liste (Facultatif)</string>
    <string name="nouvListe_dateHeure_txt_view">Entrez une échéance (facultatif)</string>
    <string name="cree_une_nouvelle_liste">Creer une nouvelle liste de tâches</string>
    <string name="check">Vérifier</string>
    <string name="associer_une_couleur">Associer une couleur :</string>
    <string name="nouvelle_liste_de_tache">Nouvelle Liste de Tache</string>
    <string name="listeliste_titre">Vos listes de tâches</string>
    <string name="creationgroupe_titre">Création d\'un groupe</string>
    <string name="creation_groupe_nom_input_hint">Entrez un nom de groupe (16 caractères max)</string>
    <string name="creation_groupe_description_input_hint">Description du groupe (facultatif)</string>
    <string name="creation_groupe_prive_switch_text">Groupe privé</string>
    <string name="liste_listestache_no_lists">Vous n\'avez aucune liste de tache.</string>
    <string name="new_listetache_datepicker">date</string>
    <string name="new_listetache_hourpicker">heure</string>
    <string name="new_tache_hourpicker">Heure</string>
    <string name="new_tache_datepicker">Date</string>
    <string name="nouvTache_dateHeure_txt_view">Choisir une échéance (facultatif)</string>
    <string name="nouvTache_descrListe_hint">Description de la tache</string>
    <string name="cree_nouv_Tache_nomTache_input_hint">Nom de la tâche</string>
    <string name="nouvelle_tache">Nouvelle tâche</string>
    <string name="cree_une_nouvelle_tache">Creer une nouvelle tâche</string>
    <string name="tache_print">Afficher</string>
    <string name="title_activity_aff_liste_tache">AffListeTache</string>
    <string name="liste_listetache_no_taches">Vous navet pas de tâches</string>
    <string name="aff_listetache_taches_a_faire_str">Taches a faire</string>
    <string name="title_activity_parametres">Parametres</string>
    <string name="nav_accueil_titile">Accueil</string>
    <string name="nav_rech_groupe_title">Recherche groupe</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_aff_groupes">AffGroupes</string>
    <string name="nav_new_groupe_title">Creer groupe</string>
    <string name="nav_groupe_title">Groupe</string>
    <string name="title_activity_gestion_groupe">GestionGroupe</string>
</resources>
