<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CreationTache">

    <TextView
        android:id="@+id/nouvTache_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/nouvelle_tache"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/cree_nouv_Tache_nomTache_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/cree_nouv_Tache_nomTache_input_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/nouvTache_descr_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nouvTache_descrListe_hint"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/nouvTache_dateHeure_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nouvTache_dateHeure_txt_view"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setdateTache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showDatePickerDialog"
            android:text="@string/new_tache_datepicker" />

        <Button
            android:id="@+id/settimeTache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="showTimePickerDialog"
            android:text="@string/new_tache_hourpicker" />


    </LinearLayout>

    <Button
        android:id="@+id/cree_nouvTache"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/cree_une_nouvelle_tache" />


    <Button
        android:id="@+id/tache_print_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="printTache"
        android:text="@string/tache_print" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </RadioGroup>


</LinearLayout>