<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreationGroupe">


    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <TextView
            android:id="@+id/creation_groupe_titre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/creationgroupe_titre"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/creation_groupe_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/creation_groupe_nom_input_hint"
            android:inputType="text"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/creation_groupe_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/creation_groupe_description_input_hint"
            android:inputType="text" />

        <Switch
            android:id="@+id/creation_groupe_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:splitTrack="false"
            android:text="@string/creation_groupe_prive_switch_text" />

        <TextView
            android:id="@+id/creation_groupe_error_ouptut"
            android:layout_width="match_parent"
            android:layout_height="220dp" />

        <Button
            android:id="@+id/creation_groupe_confirmation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:width="100dp"
            android:text="@string/inscription_confirmation_button_txt" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
