<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription">

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="495dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inscription_pseudo_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pseudo_input_hint"
                android:inputType="textPersonName" />
        </LinearLayout>

        <EditText
            android:id="@+id/inscription_password1_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password1_input_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inscription_password2_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password2_input_hint"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/inscription_mail_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/inscription_mail_input_hint"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/inscription_error_ouptut"
            android:layout_width="match_parent"
            android:layout_height="43dp" />

        <Button
            android:id="@+id/inscription_confirmation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:width="100dp"
            android:text="@string/inscription_confirmation_button_txt" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>